# Discord-stoat-ferry

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: key-files.md  security.md  workflow-gates.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/brief/: SKILL.md
.claude/skills/critique/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/skills/test-scenarios/: SKILL.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yml  docs.yml  release.yml
assets/: README.md
docs/: discord-ferry-claude-code-brief.md  index.md
docs/getting-started/: export-discord.md  first-migration.md  setup-stoat.md
docs/guides/: cli-reference.md  gui-walkthrough.md  known-limitations.md  large-servers.md  pre-flight-checklist.md  self-hosted-tips.md  timestamps.md  troubleshooting.md
docs/plans/: 2026-03-01-phase0-gap-remediation-design.md  2026-03-01-phase0-gap-remediation.md
docs/reference/: architecture.md  dce-format.md  stoat-api-notes.md
src/discord_ferry/: __init__.py  cli.py  config.py  dce_checksums.json  errors.py  gui.py  reporter.py  review.py  state.py
src/discord_ferry/core/: engine.py  events.py  security.py
src/discord_ferry/discord/: __init__.py  client.py  metadata.py  permissions.py
src/discord_ferry/exporter/: __init__.py  manager.py  runner.py
src/discord_ferry/migrator/: api.py  avatars.py  connect.py  emoji.py  messages.py  pins.py  reactions.py  sanitize.py  structure.py
src/discord_ferry/parser/: dce_parser.py  models.py  transforms.py
src/discord_ferry/uploader/: autumn.py
tests/: test_api.py  test_autumn.py  test_avatars.py  test_cli.py  test_config.py  test_connect.py  test_delta_migration.py  test_discord_client.py  test_emoji.py  test_engine.py  test_errors.py  test_exporter_manager.py  test_gui.py  test_message_split.py  test_messages.py  test_metadata.py  test_migrator.py  test_parallel_messages.py  test_parser.py  test_permissions.py  test_pins.py  test_reactions.py  test_reactions_text.py  test_reporter.py  test_review.py  test_sanitize.py  test_security.py  test_state.py  test_structure.py  test_thread_strategy.py  test_transforms.py
