[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-ferry"
version = "1.3.0"
description = "Migrate Discord servers to Stoat (formerly Revolt)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Peter Sterkenburg" }]
keywords = ["discord", "stoat", "revolt", "migration", "gui"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
    "ijson>=3.0",
    "nicegui>=2.0",
    "python-dotenv",
    "rich>=13.0",
]

[project.scripts]
ferry = "discord_ferry.cli:main"
ferry-gui = "discord_ferry.gui:main"

[project.gui-scripts]
ferry-desktop = "discord_ferry.gui:main"

[project.urls]
Homepage = "https://github.com/psthubhorizon/Discord-stoat-ferry"
Issues = "https://github.com/psthubhorizon/Discord-stoat-ferry/issues"

[project.optional-dependencies]
native = [
    "pywebview>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "aioresponses>=0.7",
    "ruff",
    "mypy",
    "pyinstaller>=6.0",
]
docs = [
    "mkdocs-material>=9.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["discord_ferry"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
